Modernize codebase with Java 21 features and improve logging
Major improvements:
- Convert DTOs to Java Records (AuthenticationRequest, AuthenticationResponse, ItemsGroup)
- Replace field injection with constructor injection across 8 classes (Spring best practice)
- Add comprehensive logging to authentication and order search endpoints
- Replace System.out/printStackTrace with proper SLF4J logging
- Use modern Stream API .toList() instead of Collectors.toList() (Java 16+)
- Use primitive boolean instead of Boolean wrapper for better performance
- Use Map.of() for empty immutable maps
- Simplify exception handling in AuthenticationController
- Remove unnecessary 'final' keyword from local variables
- Remove intermediate variables for cleaner code

Results:
- 18 files modified
- 98 lines added, 117 lines removed (net reduction: 19 lines)
- All tests pass
- Application tested and verified working
- Better maintainability, performance, and production-ready logging